# comp0034_coursework-01

./: .coverage  .gitignore  README.md  alembic.ini  comp0034-coursework1.md  pyproject.toml  requirements.txt  submission.yml
alembic/: env.py  script.py.mako
alembic/versions/: 6f44ce82332b_initial_migration.py
data/: international_visitor_arrivals.db
src/tourism_dashboard/: __init__.py  app.py  callbacks.py  data_access.py  layout.py
src/tourism_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tourism_dashboard/api/: database.py  main.py  models.py  routes.py  schemas.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_browser.py  test_callbacks.py  test_data_access.py  test_layout.py
